--- a/deploy/kustomization/worker.yaml
+++ b/deploy/kustomization/worker.yaml
@@ -31,7 +31,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 1000
-          image: "dannylongeuay/ndsq-pyapi:patchme"
+          image: "dannylongeuay/ndsq-pyapi:latest"
           imagePullPolicy: Always
           envFrom:
             - secretRef:
