--- a/.github/workflows/release_and_publish.yaml
+++ b/.github/workflows/release_and_publish.yaml
@@ -64,18 +64,18 @@ jobs:
           tag: ${{needs.info.outputs.tag}}
           name: ndsq-pyapi - ${{needs.info.outputs.version}}
           body: ${{needs.info.outputs.log}}
-  # publish:
-  #   name: Publish Image to Docker Hub
-  #   runs-on: ubuntu-latest
-  #   needs: [info, release]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         ref: main
-  #     - name: Publish to Registry
-  #       uses: elgohr/Publish-Docker-Github-Action@master
-  #       with:
-  #         name: dannylongeuay/ndsq-pyapi
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_PASSWORD }}
-  #         tags: "latest,${{needs.info.outputs.version}}"
+  publish:
+    name: Publish Image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [info, release]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: dannylongeuay/ndsq-pyapi
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,${{needs.info.outputs.version}}"
